# quicker_FLIP

./: CMakeLists.txt  FLIP_opti.cpp  FLIP_opti_0.cpp  FLIP_opti_1.cpp  FLIP_opti_10.cpp  FLIP_opti_2.cpp  FLIP_opti_3.cpp  FLIP_opti_4.cpp  FLIP_opti_5.cpp  FLIP_opti_6.cpp  FLIP_opti_7.cpp  FLIP_opti_8.cpp  FLIP_opti_9.cpp  FLIP_opti_nopar.cpp  FLIP_u.cpp  FLIP_unmodified.cpp  Math.tex  README  README.md  commandline.h  compare.py  convo.h  pooling.h  py_flip.cpp  pybin11_json.hpp  pytest.py  testpy.py
flipInPython/: flip.py  flip_opti.py  flip_timer.py
