cmake_minimum_required(VERSION 3.16)
project(FLIP)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 11)

FIND_PACKAGE( OpenMP REQUIRED)
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")

if (NOT EXISTS ${CMAKE_BINARY_DIR}/CMakeCache.txt)
  if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
  endif()
endif()

add_executable(flipu "FLIP_u.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flipo "FLIP_opti.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flipnopar "FLIP_opti_nopar.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flip0 "FLIP_opti_0.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flip1 "FLIP_opti_1.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flip2 "FLIP_opti_2.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flip3 "FLIP_opti_3.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flip4 "FLIP_opti_4.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flip5 "FLIP_opti_5.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flip6 "FLIP_opti_6.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flip7 "FLIP_opti_7.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flip8 "FLIP_opti_8.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flip9 "FLIP_opti_9.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
add_executable(flip10 "FLIP_opti_10.cpp" "commandline.h" "pooling.h" "stb_image_write.h" "stb_image.h")
